# soundmatik

./: .gitattributes  .gitignore  README.md
scripts/: build-windows-installer.sh  make-mac-package.sh  make-share-package.ps1
scripts/windows/: register-panel.ps1  soundmatik-setup.nsi
soundmatik-panel/: index.html  manifest.json  package-lock.json  package.json  tsconfig.json
soundmatik-panel/src/: main.ts
soundmatik-sidecar/: Cargo.toml
soundmatik-sidecar/mac/: Info.plist  entitlements.plist
soundmatik-sidecar/scripts/: fetch-binaries.ps1  fetch-binaries.sh
soundmatik-sidecar/src/: main.rs
